Fixed the form status letter editing dialog of madness. Files modified - [EditForm,pom.xml]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -946,7 +946,7 @@
                                     <wm-gridrow name="gridrow92">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn131">
                                             <wm-form-field name="letterTemplates" displayname="Letter Templates" show="true" primary-key="false" generator="assigned" key="letterTemplates" type="list" is-related="true" readonly="false" required="true" widget="select"
-                                            placeholder="Select value" orderby="letterTitle:asc" dataset="bind:Variables.lvLetterTemplatesForStatus.dataSet" displayfield="letterTitle"></wm-form-field>
+                                            placeholder="Select value" orderby="letterTitle:asc" dataset="bind:Variables.lvLetterTemplatesData.dataSet" displayfield="letterTitle" datafield="All Fields"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow93">
