--- a/src/main/webapp/pages/EmployeeLocations/EmployeeLocations.html
+++ b/src/main/webapp/pages/EmployeeLocations/EmployeeLocations.html
@@ -25,7 +25,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow19">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn31_1">
-                        <wm-panel iconclass="wi wi-location-on" autoclose="outsideClick" name="panel1" title="Locations Of Employees" class="panel-primary">
+                        <wm-panel iconclass="wi wi-location-on" autoclose="outsideClick" name="panel1" title="Locations Of Employees" class="panel-primary" actions="bind:Variables.Actions.dataSet" itemlabel="label" itemicon="icon" on-actionsclick="panel1Actionsclick($item)">
                             <wm-prefab prefabname="googlemaps" name="googlemaps1" locations="bind:Variables.svEmployeeLocations.dataSet" lat="deviceLatitude" lng="deviceLongitude" info="users.fullName" on-load="googlemaps1Load($scope)"></wm-prefab>
                         </wm-panel>
                     </wm-gridcolumn>
